--- a/sass/main.scss
+++ b/sass/main.scss
@@ -138,14 +138,25 @@ ul {
 .masthead {
   background: $dark;
   color: $background;
+  padding-bottom: 8px;
+  text-align: center;
 }
 
 .title {
-  margin-left: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.name {
+  font-size: 20px;
 }
 
 .position, .subtitle{
   font-family: $light;
+}
+
+.position {
+  font-size: 18px
 }
 
 .top {
@@ -153,6 +164,7 @@ ul {
   text-align: center;
   color: $background;
   font-size: 12px;
+  margin-top: 4px;
 }
 
 .collaborate {
