--- a/main.css
+++ b/main.css
@@ -2479,6 +2479,8 @@ html, body {
   font-size: 1em;
   color: #037E8C;
   background: #FFFFFA; }
+  html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none; }
 
 html, body, div, h1, h2, h3, h4, h5, p {
   margin: 0;
@@ -2577,7 +2579,7 @@ ul {
   margin-bottom: 16px; }
 
 .archive {
-  height: 300px;
+  height: 320px;
   background-image: url(http://i.imgur.com/h0MroIU.jpg);
   background-size: cover; }
 
