--- a/sass/main.scss
+++ b/sass/main.scss
@@ -112,7 +112,7 @@ p {
 
 button {
   background-color: $emphasis;
-  color: $white;
+  color: $dark;
   @include border-radius(4px);
   border: none;
 }
@@ -136,18 +136,28 @@ ul {
 
 .masthead {
   background: $anchor;
-  color: $white;
+  color: $dark;
   height: 64px;
   text-align: center;
+  border-bottom: 1px solid $black;
 }
 
 .title {
-  color: $dark;
   padding-left: 8px;
 }
 
-.title {
+.title, .options {
   line-height: 64px;
+}
+
+.options-wrapper {
+  margin: 0 48px 0 0;
+  padding: 0;
+}
+
+.options {
+  text-decoration: underline;
+  margin: 0 8px;
 }
 
 .position, .subtitle{
@@ -167,29 +177,38 @@ ul {
   height: 64px;
 }
 
+.shade {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .intro {
   clear: both;
-  max-height: 200px;
-  max-width: 320px;
   text-align: center;
-  margin: 16px auto;
+  margin: 0 auto;
+  height: 320px;
+  background-image: url(http://i.imgur.com/UBxSXBk.jpg);
+  background-size: cover;
 }
 
 .headline, .subtitle, button {
   max-width: 80%;
-  margin: 2px auto;
+  margin: 0 auto;
 }
 
 .headline {
-  margin-top: 48px;
-  color: $emphasis;
+  color: $white;
   line-height: 36px;
+  padding-top: 120px;
   margin-bottom: 8px;
   font-family: $alternate;
 }
 
 .subtitle {
-  color: $dark;
+  color: $white;
   margin-bottom: 16px;
   font-size: 14px;
 }
@@ -199,9 +218,6 @@ ul {
 }
 
 .archive {
-  height: 320px;
-  background-image: url(http://i.imgur.com/h0MroIU.jpg);
-  background-size: cover;
 }
 
 .linkbox {
