Changes intro section

--- a/main.css
+++ b/main.css
@@ -2527,12 +2527,12 @@ ul {
   line-height: 64px; }
 
 .options-wrapper {
-  margin: 0 48px 0 0;
+  margin: 0 72px 0 0;
   padding: 0; }
 
 .options {
   text-decoration: underline;
-  margin: 0 8px; }
+  margin: 0 16px; }
 
 .position, .subtitle {
   font-family: "Monofred-Ultralight", sans-serif; }
@@ -2552,14 +2552,14 @@ ul {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.64); }
 
 .intro {
   clear: both;
   text-align: center;
   margin: 0 auto;
   height: 320px;
-  background-image: url(http://i.imgur.com/UBxSXBk.jpg);
+  background-image: url(http://i.imgur.com/lIWmGG5.jpg);
   background-size: cover; }
 
 .headline, .subtitle, button {
@@ -2575,11 +2575,19 @@ ul {
 
 .subtitle {
   color: #FFFFFF;
-  margin-bottom: 16px;
+  padding-top: 8px;
+  margin-bottom: 8px;
   font-size: 14px; }
 
 .action {
-  margin-bottom: 16px; }
+  margin: 16px 0;
+  width: 128px; }
+
+.js {
+  background-color: #85ceea; }
+
+.seo {
+  background-color: #EFE034; }
 
 .linkbox {
   height: 100px;
