--- a/sass/main.scss
+++ b/sass/main.scss
@@ -98,7 +98,7 @@ a, button {
 }
 
 a {
-  color: $anchor;
+  color: $dark;
   &:hover {
     cursor: pointer;
     text-shadow: 0 0 4px $emphasis;
@@ -115,6 +115,9 @@ button {
   color: $dark;
   @include border-radius(4px);
   border: none;
+  &:hover {
+    box-shadow: 0 0 12px $emphasis;
+  }
 }
 
 ul {
