--- a/main.css
+++ b/main.css
@@ -2485,7 +2485,7 @@ a {
   color: #333333; }
   a:hover {
     cursor: pointer;
-    text-shadow: 0 0 4px #EFE034; }
+    color: #eddc1c; }
 
 p {
   margin: 0;
@@ -2591,9 +2591,37 @@ ul {
 .seo {
   background-color: #EFE034; }
 
-.linkbox {
-  height: 100px;
-  padding: 16px; }
+.subscription {
+  float: left;
+  font-family: "Tex Gyre Adventor", sans-serif; }
+
+.description {
+  width: 100%;
+  height: 32px;
+  background-color: #85ceea; }
+
+.subscribe {
+  width: 700px;
+  margin: 0 auto;
+  line-height: 32px; }
+
+.email, .email-submit {
+  height: 28px;
+  line-height: 28px;
+  border: none; }
+
+.dev, .engine {
+  width: 48%; }
+
+.dev, .engine {
+  float: left;
+  margin-left: 1%;
+  margin-right: 1%; }
+
+.glossary {
+  background-color: #85ceea; }
+  .glossary:hover {
+    box-shadow: none; }
 
 @media screen and (max-width: 400px) {
   .top {
