--- a/sass/main.scss
+++ b/sass/main.scss
@@ -101,7 +101,7 @@ a {
   color: $dark;
   &:hover {
     cursor: pointer;
-    text-shadow: 0 0 4px $emphasis;
+    color: darken($emphasis, 5%);
   }
 }
 
@@ -230,12 +230,44 @@ ul {
   background-color: $emphasis;
 }
 
-.archive {
+.subscription {
+  float: left;
+  font-family: $alternate;
 }
 
-.linkbox {
-  height: 100px;
-  padding: 16px;
+.description {
+  width: 100%;
+  height: 32px;
+  background-color: $anchor;
+}
+
+.subscribe {
+  width: 700px;
+  margin: 0 auto;
+  line-height: 32px;
+}
+
+.email, .email-submit {
+  height: 28px;
+  line-height: 28px;
+  border: none;
+}
+
+.dev, .engine {
+  width: 48%;
+}
+
+.dev, .engine {
+  float: left;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.glossary {
+  background-color: $anchor;
+  &:hover {
+    box-shadow: none;
+  }
 }
 
 @media screen and (max-width: 400px) {
