Updates home page copy

--- a/main.css
+++ b/main.css
@@ -2618,6 +2618,10 @@ ul {
   margin-left: 1%;
   margin-right: 1%; }
 
+.describe-title, .describe {
+  max-width: 80%;
+  margin: 0 auto; }
+
 .glossary {
   background-color: #85ceea; }
   .glossary:hover {
