--- a/main.css
+++ b/main.css
@@ -2508,46 +2508,53 @@ ul {
   padding: 0; }
 
 /***** Detail Styles ******/
-.wrapper {
-  padding: 0; }
-
-.logo {
-  height: 64px;
-  padding-left: 48px; }
-
 .masthead {
   background: #85ceea;
   color: #333333;
+  width: 100%;
   height: 64px;
-  text-align: center;
   border-bottom: 1px solid #000000; }
 
-.title {
-  padding-left: 8px; }
+.marquee-wrapper, .options-wrapper {
+  width: 100%;
+  margin: 0; }
 
-.title, .options {
-  line-height: 64px; }
+.marquee-wrapper {
+  height: 64px; }
+
+.marquee {
+  margin: 0 auto;
+  width: 216px;
+  height: 64px; }
+
+.logo, .title {
+  height: 64px;
+  line-height: 64px;
+  float: left;
+  clear: all; }
+
+.title {
+  margin: 0 auto;
+  padding-top: 0;
+  width: 148px; }
 
 .options-wrapper {
-  margin: 0 72px 0 0;
-  padding: 0; }
+  height: 32px; }
 
 .options {
   text-decoration: underline;
-  margin: 0 16px; }
+  margin: 0;
+  float: left;
+  width: 25vw;
+  font-size: 10px;
+  line-height: 32px;
+  text-align: center; }
 
 .position, .subtitle {
   font-family: "Monofred-Ultralight", sans-serif; }
 
 .position {
   font-size: 18px; }
-
-.top-left {
-  float: left; }
-
-.top-right {
-  float: right;
-  height: 64px; }
 
 .shade {
   width: 100%;
@@ -2626,9 +2633,3 @@ ul {
   background-color: #85ceea; }
   .glossary:hover {
     box-shadow: none; }
-
-@media screen and (max-width: 400px) {
-  .top {
-    width: 33%; }
-  .quote {
-    width: 34%; } }
