--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,39 +128,57 @@ ul {
 
 /***** Detail Styles ******/
 
-.wrapper {
-  padding: 0;
-}
-
-.logo {
-  height: 64px;
-  padding-left: 48px;
-}
-
 .masthead {
   background: $anchor;
   color: $dark;
+  width: 100%;
   height: 64px;
-  text-align: center;
   border-bottom: 1px solid $black;
 }
 
+.marquee-wrapper, .options-wrapper {
+  width: 100%;
+  margin: 0;
+}
+
+.marquee-wrapper {
+  height: 64px;
+}
+
+.marquee {
+  margin: 0 auto;
+  width: 216px;
+  height: 64px;
+}
+
+.logo, .title {
+  height: 64px;
+  line-height: 64px;
+  float: left;
+  clear: all;
+}
+
 .title {
-  padding-left: 8px;
+  margin: 0 auto;
+  padding-top: 0;
+  width: 148px;
 }
 
 .title, .options {
-  line-height: 64px;
 }
 
 .options-wrapper {
-  margin: 0 72px 0 0;
-  padding: 0;
+  height: 32px;
 }
 
 .options {
   text-decoration: underline;
-  margin: 0 16px;
+  margin: 0;
+  float: left;
+  width: 25vw;
+  font-size: 10px;
+  line-height: 32px;
+  text-align: center;
 }
 
 .position, .subtitle{
@@ -169,15 +187,6 @@ ul {
 
 .position {
   font-size: 18px
-}
-
-.top-left {
-  float: left;
-}
-
-.top-right {
-  float: right;
-  height: 64px;
 }
 
 .shade {
@@ -272,14 +281,5 @@ ul {
   background-color: $anchor;
   &:hover {
     box-shadow: none;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .top {
-    width: 33%;
-  }
-  .quote {
-    width: 34%;
   }
 }
