--- a/main.css
+++ b/main.css
@@ -2515,31 +2515,30 @@ ul {
   height: 64px;
   border-bottom: 1px solid #000000; }
 
-.marquee-wrapper, .options-wrapper {
-  width: 100%;
-  margin: 0; }
-
-.marquee-wrapper {
-  height: 64px; }
-
 .marquee {
-  margin: 0 auto;
-  width: 216px;
+  margin: 0;
+  width: 256px;
   height: 64px; }
 
 .logo, .title {
-  height: 64px;
-  line-height: 64px;
   float: left;
   clear: all; }
 
+.logo {
+  height: 48px;
+  margin: 8px 2px 8px 12px; }
+
 .title {
+  height: 64px;
   margin: 0 auto;
   padding-top: 0;
-  width: 148px; }
+  width: 148px;
+  line-height: 64px; }
 
 .options-wrapper {
-  height: 32px; }
+  width: 100%;
+  height: 32px;
+  margin: 0; }
 
 .options {
   text-decoration: underline;
