--- a/main.css
+++ b/main.css
@@ -2509,16 +2509,19 @@ ul {
 
 /***** Detail Styles ******/
 .masthead {
+  position: fixed;
+  top: 0;
   background: #85ceea;
   color: #333333;
-  width: 100%;
+  width: 100vw;
   height: 64px;
   border-bottom: 1px solid #000000; }
 
 .marquee {
   margin: 0;
-  width: 256px;
-  height: 64px; }
+  width: 80%;
+  height: 64px;
+  float: left; }
 
 .logo, .title {
   float: left;
@@ -2535,10 +2538,38 @@ ul {
   width: 148px;
   line-height: 64px; }
 
+.nav-options {
+  width: 20%;
+  float: left;
+  text-align: center;
+  height: 64px; }
+
+.line-wrapper {
+  cursor: pointer;
+  width: 32px;
+  margin: 21px auto; }
+
+.line {
+  width: 100%;
+  margin: 5px 0 0 0;
+  height: 4px;
+  background: #333333; }
+
 .options-wrapper {
   width: 100%;
   height: 32px;
-  margin: 0; }
+  margin: 0;
+  z-index: 1;
+  transition: margin 0.33s;
+  -moz-transition: margin 0.33s;
+  -webkit-transition: margin 0.33s;
+  -o-transition: margin 0.33s; }
+
+.icon-unclicked {
+  margin-top: 32; }
+
+.icon-clicked {
+  margin-top: 64px; }
 
 .options {
   text-decoration: underline;
