--- a/main.css
+++ b/main.css
@@ -2622,44 +2622,35 @@ ul {
 /*** Description ***/
 .description {
   width: 100%;
-  height: 24px;
-  background-color: #85ceea; }
-
-.follow-wrapper {
-  width: 156px;
-  margin: 0 auto; }
-
-.twitter-wrapper, .github-wrapper, .linkedin-wrapper {
-  width: 52px;
-  float: left;
-  line-height: 24px;
-  text-align: center; }
-
-.twitter {
-  text-align: right; }
-
-.follow-text {
-  width: 32px;
-  margin: 0 auto; }
-
-.email, .email-submit {
-  height: 28px;
-  line-height: 28px;
-  border: none; }
+  height: 480px;
+  background-color: #FFFFFF;
+  padding-top: 16px; }
 
 .dev, .engine {
-  width: 48%; }
-
-.dev, .engine {
+  width: 48%;
   float: left;
   margin-left: 1%;
   margin-right: 1%; }
 
 .describe-title, .describe {
-  max-width: 80%;
-  margin: 0 auto; }
+  margin: 8px auto; }
+
+.describe-title {
+  text-decoration: underline;
+  text-align: center;
+  font-size: 24px; }
+
+.describe {
+  font-family: 'Tex Gyre Adventor';
+  max-width: 60%; }
 
 .glossary {
   background-color: #85ceea; }
   .glossary:hover {
     box-shadow: none; }
+
+/*** Footer ***/
+.footer {
+  height: 128px;
+  background: #333333;
+  opacity: 1; }
