--- a/sass/main.scss
+++ b/sass/main.scss
@@ -172,7 +172,14 @@ ul {
   width: 100%;
   margin: 5px 0 0 0;
   height: 4px;
+}
+
+.dark {
   background: $dark;
+}
+
+.light {
+  background: $emphasis;
 }
 
 .options-wrapper {
@@ -257,12 +264,34 @@ ul {
   width: 128px;
 }
 
+.follow-wrapper {
+  background: $anchor;
+  height: 24px;
+}
+
+.follow {
+  width: 292px;
+  margin: 0 auto;
+  font-size: 14px;
+  font-family: 'Tex Gyre Adventor';
+  color: $dark;
+}
+
+.follow-text, .twitter, .github, .linkedin {
+  float: left;
+  line-height: 24px;
+  text-align: center;
+}
+
+.twitter, .github, .linkedin {
+  width: 24px;
+}
+
 
 /*** Description ***/
 
 .description {
   width: 100%;
-  height: 480px;
   background-color: $white;
   padding-top: 16px;
 }
