--- a/main.css
+++ b/main.css
@@ -2465,7 +2465,8 @@ textarea {
 /***** General Styles ******/
 html, body {
   font-family: Futura, Trebuchet MS, Arial, sans-serif;
-  font-size: 1em; }
+  font-size: 1em;
+  background: #333333; }
   html::-webkit-scrollbar, body::-webkit-scrollbar {
     display: none; }
 
@@ -2557,6 +2558,7 @@ ul {
   background: #EFE034; }
 
 .options-wrapper {
+  background: #FFFFFF;
   width: 100%;
   height: 32px;
   margin: 0;
@@ -2646,37 +2648,71 @@ ul {
 /*** Description ***/
 .description {
   width: 100%;
-  background-color: #FFFFFF;
-  padding-top: 16px; }
+  padding-top: 16px;
+  padding-bottom: 8px;
+  background: #FFFFFF; }
 
-.dev, .engine {
-  width: 48%;
-  float: left;
-  margin-left: 1%;
-  margin-right: 1%; }
+.dev-wrapper {
+  background-color: #FFFFFF;
+  color: #333333; }
 
 .describe-title, .describe {
   margin: 8px auto; }
 
 .describe-title {
-  text-decoration: underline;
   text-align: center;
-  font-size: 24px; }
+  font-size: 16px;
+  line-height: 20px; }
 
 .describe {
   font-family: 'Tex Gyre Adventor';
-  max-width: 60%; }
+  font-size: 12px;
+  max-width: 80%;
+  text-align: center; }
 
-.glossary {
-  background-color: #85ceea; }
-  .glossary:hover {
-    box-shadow: none; }
+.details-section-wrapper {
+  background-color: #FFFFFF;
+  color: #333333; }
+
+.details-wrapper {
+  width: 280px;
+  height: 64px;
+  margin: 24px auto 0 auto; }
+
+.graphic-wrapper, .details-title, .details {
+  float: left; }
+
+.graphic-wrapper {
+  height: 32px;
+  width: 32px;
+  margin: 8px;
+  text-align: center; }
+
+.graphic {
+  line-height: 32px;
+  color: #44b4df; }
+
+.details-title, .details {
+  width: 228px;
+  margin-left: 4px; }
+
+.details-title {
+  font-size: 12px;
+  line-height: 20px; }
+
+.details {
+  font-size: 10px;
+  font-family: 'Tex Gyre Adventor';
+  line-height: 14px; }
+
+.lower {
+  font-size: 14px;
+  margin-top: 24px; }
 
 /*** Footer ***/
 .footer {
   height: 48px;
-  background: #333333;
-  opacity: 1; }
+  background: #333333; }
 
 .follow-bottom {
   margin: 0;
@@ -2711,7 +2747,7 @@ ul {
 
 .logo-bottom {
   height: 30px;
-  margin: 9px 24px 9px 9px;
+  margin: 9px 24px 9px 6px;
   float: right;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
