--- a/sass/main.scss
+++ b/sass/main.scss
@@ -73,6 +73,7 @@ html, body {
   &::-webkit-scrollbar {
     display: none;
   }
+  background: $dark;
 }
 
 html, body, div, h1, h2, h3, h4, h5, p {
@@ -183,6 +184,7 @@ ul {
 }
 
 .options-wrapper {
+  background: $white;
   width: 100%;
   height: 32px;
   margin: 0;
@@ -292,15 +294,14 @@ ul {
 
 .description {
   width: 100%;
-  background-color: $white;
   padding-top: 16px;
+  padding-bottom: 8px;
+  background: $white;
 }
 
-.dev, .engine {
-  width: 48%;
-  float: left;
-  margin-left: 1%;
-  margin-right: 1%;
+.dev-wrapper {
+  background-color: $white;
+  color: $dark;
 }
 
 .describe-title, .describe {
@@ -308,21 +309,64 @@ ul {
 }
 
 .describe-title {
-  text-decoration: underline;
   text-align: center;
-  font-size: 24px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .describe {
   font-family: 'Tex Gyre Adventor';
-  max-width: 60%;
+  font-size: 12px;
+  max-width: 80%;
+  text-align: center;
 }
 
-.glossary {
-  background-color: $anchor;
-  &:hover {
-    box-shadow: none;
-  }
+.details-section-wrapper {
+  background-color: $white;
+  color: $dark;
+}
+
+.details-wrapper {
+  width: 280px;
+  height: 64px;
+  margin: 24px auto 0 auto;
+}
+
+.graphic-wrapper, .details-title, .details {
+  float: left;
+}
+
+.graphic-wrapper {
+  height: 32px;
+  width: 32px;
+  margin: 8px;
+  text-align: center;
+}
+
+.graphic {
+  line-height: 32px;
+  color: darken($anchor, 15%);
+}
+
+.details-title, .details {
+  width: 228px;
+  margin-left: 4px;
+}
+
+.details-title {
+  font-size: 12px;
+  line-height: 20px;
+}
+
+.details {
+  font-size: 10px;
+  font-family: 'Tex Gyre Adventor';
+  line-height: 14px;
+}
+
+.lower {
+  font-size: 14px;
+  margin-top: 24px;
 }
 
 
@@ -331,7 +375,6 @@ ul {
 .footer {
   height: 48px;
   background: $dark;
-  opacity: 1;
 }
 
 .follow-bottom {
@@ -373,7 +416,7 @@ ul {
 
 .logo-bottom {
   height: 30px;
-  margin: 9px 24px 9px 9px;
+  margin: 9px 24px 9px 6px;
   float: right;
   @include border-radius(4px);
 }
