--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@ Theme Name: MeltWebs
 Author: Michael J Melton <michael@meltwebs.com>
 */
 
-/***** Colors ******/
+/***** Colors **************/
 $anchor: #85ceea /* sky blue */ ;
 $emphasis: #EFE034/* sunshine */ ;
 $dark: #333333 /* charcoal */ ;
@@ -11,7 +11,7 @@ $black: #000000 /* black */ ;
 $white: #FFFFFF /* white */ ;
 
 
-/***** Fonts ******/
+/***** Fonts ***************/
 
 @font-face {
   font-family: 'Monofred-Ultralight';
@@ -26,7 +26,7 @@ $sans: Futura,Trebuchet MS,Arial,sans-serif;
 $alternate: 'Tex Gyre Adventor', sans-serif;
 
 
-/***** Normalize ******/
+/***** Normalize ***********/
 
 @import 'normalize';
 @import "variables";
@@ -43,7 +43,7 @@ $alternate: 'Tex Gyre Adventor', sans-serif;
 @import "icons";
 
 
-/***** Mixins & Keyframes ******/
+/***** Mixins & Keyframes **/
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
@@ -108,6 +108,11 @@ button {
   &:hover {
     box-shadow: 0 0 12px $emphasis;
   }
+  &:focus {
+    outline: 0;
+    -webkit-box-shadow: 0 0 12px $emphasis;
+    box-shadow: 0 0 12px $emphasis;
+  }
 }
 
 ul {
@@ -117,7 +122,7 @@ ul {
 }
 
 
-/***** Detail Styles ******/
+/***** Detail Styles *******/
 
 /*** Nav ***/
 
@@ -129,6 +134,12 @@ ul {
   width: 100vw;
   height: 64px;
   border-bottom: 1px solid $black;
+}
+
+.no-hover {
+  &:hover {
+    color: $dark;
+  }
 }
 
 .marquee {
@@ -420,3 +431,13 @@ ul {
   float: right;
   @include border-radius(4px);
 }
+
+
+/***** Pages ***************/
+
+@import 'pages';
+
+
+/***** Responsive **********/
+
+@import 'responsive';
