--- a/main.css
+++ b/main.css
@@ -2767,6 +2767,9 @@ ul {
   padding: 64px 0 20px 0;
   background: #FFFFFF; }
 
+.blog-page {
+  min-height: 50vh; }
+
 .page-title {
   text-decoration: underline;
   width: 70%;
@@ -2774,12 +2777,29 @@ ul {
 
 .page-text {
   width: 70%;
-  margin: 12px auto 0 auto;
+  margin: 24px auto 0 auto;
   font-family: 'Tex Gyre Adventor'; }
 
 .bullets {
   font-family: Futura, Trebuchet MS, Arial, sans-serif;
   font-size: 18px;
   color: #000000; }
+
+fieldset {
+  border: none;
+  max-width: 70%;
+  margin: 24px auto; }
+
+input, textarea {
+  border: none;
+  background: #c6e8f5;
+  margin-bottom: 8px; }
+  input:focus, textarea:focus {
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: 0 0 12px none; }
+
+.btn {
+  margin-top: 16px; }
 
 /***** Responsive **********/
