--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -5,6 +5,10 @@
   background: $white;
 }
 
+.blog-page {
+  min-height: 50vh;
+}
+
 .page-title {
   text-decoration: underline;
   width: 70%;
@@ -13,7 +17,7 @@
 
 .page-text {
   width: 70%;
-  margin: 12px auto 0 auto;
+  margin: 24px auto 0 auto;
   font-family: 'Tex Gyre Adventor';
 }
 
@@ -21,4 +25,25 @@
   font-family: Futura, Trebuchet MS, Arial, sans-serif;;
   font-size: 18px;
   color: $black;
+}
+
+fieldset {
+  border: none;
+  max-width: 70%;
+  margin: 24px auto;
+}
+
+input, textarea {
+  border: none;
+  background: lighten($anchor, 15%);
+  margin-bottom: 8px;
+  &:focus {
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: 0 0 12px none;
+  }
+}
+
+.btn {
+  margin-top: 16px;
 }
