--- a/main.css
+++ b/main.css
@@ -2765,7 +2765,8 @@ ul {
 /*** About ***/
 .page-body {
   padding: 64px 0 20px 0;
-  background: #FFFFFF; }
+  background: #FFFFFF;
+  min-height: 320px; }
 
 .blog-page {
   min-height: 50vh; }
@@ -2785,21 +2786,26 @@ ul {
   font-size: 18px;
   color: #000000; }
 
-fieldset {
-  border: none;
-  max-width: 70%;
-  margin: 24px auto; }
+.contact-option-wrapper {
+  width: 100%;
+  height: 48px;
+  margin-top: 12px; }
 
-input, textarea {
-  border: none;
-  background: #c6e8f5;
-  margin-bottom: 8px; }
-  input:focus, textarea:focus {
-    outline: 0;
-    -webkit-box-shadow: none;
-    box-shadow: 0 0 12px none; }
+.contact-wrapper {
+  width: 80%;
+  margin: 0 auto;
+  height: 48px; }
 
-.btn {
-  margin-top: 16px; }
+.contact-icon, .contact-text {
+  float: left;
+  line-height: 48px; }
+
+.contact-icon {
+  margin-right: 12px;
+  width: 32px;
+  text-align: center; }
+
+.contact-text {
+  font-family: 'Tex Gyre Adventor'; }
 
 /***** Responsive **********/
