--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -1,13 +1,14 @@
 /*** About ***/
 
 .page-body {
+  margin-top: 64px;
   padding: 64px 0 20px 0;
   background: $white;
   min-height: 320px;
 }
 
 .blog-page {
-  min-height: 50vh;
+  min-height: 65vh;
 }
 
 .page-title {
