--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,6 +134,7 @@ ul {
   width: 100vw;
   height: 64px;
   border-bottom: 1px solid $black;
+  z-index: 2;
 }
 
 .no-hover {
@@ -195,23 +196,25 @@ ul {
 }
 
 .options-wrapper {
+  position: fixed;
+  top: 32px;
   background: $white;
   width: 100%;
   height: 32px;
   margin: 0;
   z-index: 1;
-  transition: margin 0.33s;
-    -moz-transition: margin 0.33s;
-    -webkit-transition: margin 0.33s;
-    -o-transition: margin 0.33s;
+  transition: top 0.33s;
+    -moz-transition: top 0.33s;
+    -webkit-transition: top 0.33s;
+    -o-transition: top 0.33s;
 }
 
 .icon-unclicked {
-  margin-top: 32;
+  top: 32px;
 }
 
 .icon-clicked {
-  margin-top: 64px;
+  top: 64px;
 }
 
 .options {
@@ -246,7 +249,7 @@ ul {
 .intro {
   clear: both;
   text-align: center;
-  margin: 0 auto;
+  margin: 64px auto 0 auto;
   height: 320px;
   background-image: url(http://i.imgur.com/lIWmGG5.jpg);
   background-size: cover;
@@ -338,7 +341,7 @@ ul {
 }
 
 .details-wrapper {
-  width: 280px;
+  width: 256px;
   height: 64px;
   margin: 24px auto 0 auto;
 }
@@ -350,7 +353,7 @@ ul {
 .graphic-wrapper {
   height: 32px;
   width: 32px;
-  margin: 8px;
+  margin: 16px 12px 16px 8px;
   text-align: center;
 }
 
@@ -360,7 +363,7 @@ ul {
 }
 
 .details-title, .details {
-  width: 228px;
+  width: 192px;
   margin-left: 4px;
 }
 
@@ -377,7 +380,8 @@ ul {
 
 .lower {
   font-size: 14px;
-  margin-top: 24px;
+  margin-top: 36px;
+  margin-bottom: 8px;
 }
 
 
